# infinite_numbers

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
include/: infInt.hpp
src/: DivisionByZero.hpp  infInt.cpp  infInt.hpp  infIntQ.cpp  infIntQ.hpp  main.cpp  test.cpp
test/: test.cpp
